# liftimage_fixed

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_liftimg3d_motionctrl.py
distort-3dgs/: cmd_3dgs_motionctrl_inthewild.py  train.py
distort-3dgs/arguments/: __init__.py
distort-3dgs/arguments/distort_3dgs/: default.py
distort-3dgs/gaussian_renderer/: __init__.py
distort-3dgs/scene/: __init__.py  cameras.py  dataset.py  dataset_readers.py  deformation.py  gaussian_model.py  grid.py  hexplane.py
distort-3dgs/submodules/diff-ori/: pyproject.toml
distort-3dgs/submodules/diff-w/: pyproject.toml
distort-3dgs/submodules/simple-knn/: pyproject.toml
distort-3dgs/submodules/simple-knn/simple_knn.egg-info/: PKG-INFO  SOURCES.txt
distort-3dgs/utils/: camera_utils.py  graphics_utils.py  loss_utils.py  pose_utils.py  scene_utils.py
mast3r/: calc_pose_inthewild_motionctrl.py
mast3r/dust3r/dust3r/: inference.py  model.py  patch_embed.py  viz.py
mast3r/dust3r/dust3r/cloud_opt/: optimizer.py
mast3r/dust3r/dust3r/heads/: dpt_head.py
mast3r/dust3r/dust3r/utils/: geometry.py
mast3r/mast3r/: catmlp_dpt_head.py  model.py
motionctrlsvd/: mp4topng_iterative_args.py  requirements.txt  test_xformers.py  visualize_trajectory.py
motionctrlsvd/configs/inference/: scripts_motionctrl.py
motionctrlsvd/examples/camera_poses/: test_camera_Round-RI_f90.json
motionctrlsvd/main/inference/: motionctrl_cmcm_run.py
motionctrlsvd/sgm/models/: diffusion.py
motionctrlsvd/sgm/motionctrl/: camera_motion_control.py  modified_svd.py
(+3 files in other folders)
